Revision history for ExtUtils-InstallPaths

{{$NEXT}}

0.005     2012-01-09 23:34:16 Europe/Amsterdam
          Don't return references to internal state

0.004     2011-10-29 00:49:21 Europe/Amsterdam
          Sanatized the config method

0.003     2011-08-22 16:23:30 Europe/Amsterdam
          Reinstated the module_name parameter

0.002     2011-05-08 11:59:59 Europe/Amsterdam
          Fixed case insensitive file matching in test
          Fixed attribution

0.001     2011-04-04 15:32:56 Europe/Amsterdam
    -     Initial version